--- a/.env
+++ b/.env
@@ -1,6 +1,13 @@
 # en .env
-DB_USER=terrkko
-DB_PASSWORD=Wamv9lfrR093oJCVT7pqgL612CNFeClt
-DB_HOST=dpg-d13evip5pdvs73dmui5g-a.oregon-postgres.render.com
+#DB_USER=terrkko
+#DB_PASSWORD=Wamv9lfrR093oJCVT7pqgL612CNFeClt
+#DB_HOST=dpg-d13evip5pdvs73dmui5g-a.oregon-postgres.render.com
+#DB_PORT=5432
+#DB_NAME=consultoria_36cs
+
+# local
+DB_USER=postgres
+DB_PASSWORD=dpgtdes
+DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=consultoria_36cs
+DB_NAME=consultoria_pruebas
