--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ pyhanko-certvalidator==0.27.0
 pyinstaller==6.13.0
 pyinstaller-hooks-contrib==2025.4
 pypdf==5.7.0
+PyPDF2>=3.0.0
 pyphen==0.17.2
 python-bidi==0.6.6
 python-dateutil==2.9.0.post0
