fix:Paciente se agrega

--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@
 #DB_NAME=consultoria_pruebas
 
 
-DB_NAME=consultoria
+#DB_NAME=consultoria
 DB_SSLMODE=require
 DB_USER=neondb_owner
 DB_PASSWORD=npg_rQxDVY0R4GUi
