--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ arabic-reshaper==3.0.0
 asn1crypto==1.5.1
 attrs==25.3.0
 bcrypt==4.3.0
+beautifulsoup4==4.13.5
 blinker==1.9.0
 Brotli==1.1.0
 certifi==2025.6.15
@@ -24,6 +25,7 @@ docopt==0.6.2
 et_xmlfile==2.0.0
 Flask==3.1.1
 Flask-Login==0.6.3
+Flask-Mail==0.10.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
 fonttools==4.58.5
@@ -66,7 +68,7 @@ pyhanko-certvalidator==0.27.0
 pyinstaller==6.13.0
 pyinstaller-hooks-contrib==2025.4
 pypdf==5.7.0
-PyPDF2>=3.0.0
+PyPDF2==3.0.1
 pyphen==0.17.2
 python-bidi==0.6.6
 python-dateutil==2.9.0.post0
@@ -74,11 +76,13 @@ python-dotenv==1.1.1
 pytz==2025.2
 pywin32-ctypes==0.2.3
 PyYAML==6.0.2
+qrcode==8.2
 reportlab==4.4.0
 requests==2.32.4
 setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.8
 SQLAlchemy==2.0.41
 svglib==1.5.1
 tinycss2==1.4.0
